# demon

./: .gitignore  LICENSE.txt  Makefile  Makefile.am  README.md  Search.cpp  Search.h  configure.ac
build-aux/: git-version-gen
build-aux/m4/: as-compiler-flag.m4  ax_boost_program_options.m4  fix_rpath.patch  gcov.m4  performance.m4
coverage/: Makefile.am  Makefile.in
jdemon.xcodeproj/: project.pbxproj
jdemon.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
m4/: ax_boost_mpi.m4  ax_cxx_compile_stdcxx_11.m4  boost.m4  gcov.m4
random_walk/: main.cpp  random_walk.1
scripts/: Makefile.am  aws_stuff  baton.sh  fetchdemon.sh  run_with_args.sh  setup_aws.sh
scripts/jenkins/: deploy-aws-cleanup.sh  deploy-aws.sh  deploy-kenyon.sh  make-dist.sh  performance-tests.sh  run-tests.sh  short-run.sh  test-coverage.sh  test-deploy-cleanup.sh  test-deploy.sh  tiny-cluster-cleanup.sh  tiny-cluster.sh
scripts/package/parameters/: ising-invocation  stoch-invocation
scripts/plot/: 3dscatter.py  histogram.py  results.csv  test.dist
scripts/test/: test-plot.sh
src/: Circos.cpp  Circos.h  InstrumentFactories.cpp  Ising.cpp  Ising.h  Makefile.am  Makemodule.am  Measurement.cpp  Measurement.h  Reservoir.cpp  Reservoir.h  ReservoirFactory.cpp  ReservoirFactory.h  States.cpp  States.h  Stochastic.cpp  Stochastic.h  System.cpp  System.h  Utilities.cpp  Utilities.h  clangomp.h  main.cpp
src/lib/: CATools.cpp  CATools.h  InstrumentFactories.cpp  InstrumentFactories.h  Ising.cpp  Ising.h  IsingGrid.cpp  IsingGrid.h  Makefile.am  Measurement.cpp  Measurement.h  OtherAutomaton.cpp  OtherAutomaton.h  RandomnessDelegate.h  Reservoir.cpp  Reservoir.h  Stochastic.cpp  Stochastic.h  System.cpp  System.h  TMGas.cpp  TMGas.h  Utilities.cpp  Utilities.h  clangomp.h  cli.cpp  cli.h  openmp.cpp
src/mpi/: Makefile.am  main.cpp
src/openmp/: Makefile.am  main.cpp
test/: IsingPerformance.cpp  IsingPerformance.h  IsingTest.cpp  IsingTest.h  Makefile.am  Makefile.am.html  Makemodule.am  MeasurementTest.cpp  MeasurementTest.h  MockObjects.h  StochTest.cpp  StochTest.h  SystemTest.cpp  SystemTest.h  core.cpp  demoncore-wrapper.sh  performance.cpp
test/Clocker/: ClockerModel.h
test/coverage/: Makemodule.am
test/lib/: CAToolsTest.cpp  IsingGridTest.cpp  IsingTest.cpp  Makefile.am  MeasurementTest.cpp  MockObjects.h  OtherAutomatonTest.cpp  RandomnessDelegateTest.cpp  StochTest.cpp  SystemTest.cpp  TMGasTest.cpp  TestFixtures.h  core.cpp
test/performance/: #Makefile.am#  Makefile.am  ReservoirBenchmark.cpp  ReservoirBenchmark.h  ising-wrapper.sh  ising.cpp  junit.xslt  stoch-wrapper.sh  stoch.cpp  tmgas-wrapper.sh  tmgas.cpp
test/performance/Clocker/: ClockerListener.h  ClockerXmlHook.cpp
thermaleraser/: States.cpp  States.h  System.cpp  System.h  Utilities.cpp  Utilities.h  main.cpp  thermaleraser.1
thermaleraser.xcodeproj/: project.pbxproj
